--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "@coral-xyz/anchor": "^0.27.0"
     },
     "devDependencies": {
+        "@solana/web3.js": "^1.73.3",
         "@types/bn.js": "^5.1.0",
         "@types/chai": "^4.3.0",
         "@types/mocha": "^9.0.0",
